:rocket: mudado roles de usuario para um role enum
