# user/src/models/roleModel.js
@@ -1,25 +1,0 @@
-import { DataTypes } from 'sequelize';
-import db from '../config/database.js';
-
-const Role = db.sequelize.define('Role', {
-  name: {
-    type: DataTypes.STRING,
-    allowNull: false,
-    unique: true
-  },
-  description: {
-    type: DataTypes.TEXT,
-    allowNull: true
-  },
-  active: {
-    type: DataTypes.BOOLEAN,
-    defaultValue: true,
-    allowNull: false
-  }
-}, {
-  tableName: 'roles',
-  timestamps: true,
-  paranoid: true
-});
-
-export default Role;
